@@ -40,7 +40,7 @@ static void         symbols_add (Symbols *syms, TrieChar c);
 static Bool         da_check_free_cell (DArray         *d,
                                         TrieIndex       s);
 
-static int          da_num_children    (DArray         *d,
+static Bool         da_has_children    (DArray         *d,
                                         TrieIndex       s);
 
 static Symbols *    da_output_symbols  (DArray         *d,
@@ -344,25 +344,22 @@ da_check_free_cell (DArray         *d,
     return (da_get_check (d, s) < 0);
 }
 
-static int
-da_num_children    (DArray         *d,
+static Bool
+da_has_children    (DArray         *d,
                     TrieIndex       s)
 {
-    int         num_children;
     TrieIndex   base;
     uint16      c;
 
-    num_children = 0;
-
     base = da_get_base (d, s);
     if (TRIE_INDEX_ERROR == base || base < 0)
-        return 0;
+        return FALSE;
 
     for (c = 0; c < TRIE_CHAR_MAX; c++)
         if (da_get_check (d, base + c) == s)
-            ++num_children;
+            return TRUE;
 
-    return num_children;
+    return FALSE;
 }
 
 static Symbols *
@@ -541,7 +538,7 @@ da_extend_pool     (DArray         *d,
 void
 da_prune (DArray *d, TrieIndex s)
 {
-    while (da_get_root (d) != s && 0 == da_num_children (d, s)) {
+    while (da_get_root (d) != s && !da_has_children (d, s)) {
         TrieIndex   parent;
 
         parent = da_get_check (d, s);
